# TF-IDF

./: README.md  pyproject.toml
app/: main.py  utils.py
app/texts/: text.txt
