[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alexandr <alexandr.panteleev2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
